[Add] Coding Test Study ~ 10/12

--- a/Problem Solving.ipynb
+++ b/Problem Solving.ipynb
@@ -24,6 +24,7 @@
     "0. 시간복잡도 확인:  $ O(n) < 10^{8} $ <br>\n",
     "<br>\n",
     "1. 직관적 사고(완전탐색 or 그리디) <br>\n",
+    "    - Greedy: Input, Output 적고 떠올려보기\n",
     "\n",
     "    - queue(->BFS), stack(->DFS)\n",
     "    \n",
@@ -1168,6 +1169,109 @@
     "    result.append(curr_task)\n",
     "\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "896994"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SKT Fly AI Challenger\n",
+    "# Problem 2.\n",
+    "# 높은 탑 쌓기 문제\n",
+    "# 길이가 같은 막대기가 2개 이상이어야 탑을 쌓을 수 있으며, \n",
+    "# 그 위에 막대기 올려놓아져야 탑으로 인정된다. \n",
+    "# 가장 높은 탑 길이를 출력하는 문제.\n",
+    "\n",
+    "# 2이상인 것들을 모두 2를 빼고 저장.\n",
+    "# [8, 8, 5]\n",
+    "# [8, 8, 8, 5] + [5]\n",
+    "# 개수가 같아지도록\n",
+    "# [8, 8, 8] + [5, 5 ,5]\n",
+    "# [7, 7] + [5]\n",
+    "# [7, 7] + [5, 3, 2]\n",
+    "\n",
+    "# 단순 구현 문제였음..\n",
+    "\n",
+    "def highest(blocks):\n",
+    "    block_dict = {}\n",
+    "    for block in blocks:\n",
+    "        if block not in block_dict:\n",
+    "            block_dict[block] = 0\n",
+    "        block_dict[block] += 1\n",
+    "    \n",
+    "    depth = []\n",
+    "    width = []\n",
+    "\n",
+    "    # O(n)\n",
+    "    for block in block_dict.keys():\n",
+    "        if block_dict[block] >= 2:\n",
+    "            block_cnt = block_dict[block]\n",
+    "            depth.extend([block]*(block_cnt//2))\n",
+    "            width.extend([block]*(block_cnt%2))\n",
+    "            \n",
+    "            block_dict[block] = block_cnt%2\n",
+    "        else:\n",
+    "            width.append(block)\n",
+    "\n",
+    "    depth = sorted(depth)[::-1]\n",
+    "\n",
+    "    while abs(len(depth)-len(width)) > 1:\n",
+    "        block = depth.pop()\n",
+    "        width.extend([block]*2)\n",
+    "    \n",
+    "    width = sorted(width)[::-1]\n",
+    "\n",
+    "    height_cnt = min(len(depth), len(width))\n",
+    "    height = sum(depth[:height_cnt]) + height_cnt\n",
+    "    return height\n",
+    "\n",
+    "blocks = [8, 8]*100000 + [5]*99000\n",
+    "highest(blocks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bfs, dfs를 통해 완전탐색할 수 있을까..?\n",
+    "# visited를 초기화할 수 있는 방법만 있다면 가능..\n",
+    "# route 안의 값에 포함되어 있다면, queue(stack)에 추가하지 않은 형태로..!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.9285714285714284"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(4.5*20 + 4*21 + 3.5*24 + 3*3 + 2.5*3 + 2*3)/74\n",
+    "(4.5*9 + 3.5*12)/21"
    ]
   }
  ],
