--- a/Datastructure & Algorithm.ipynb
+++ b/Datastructure & Algorithm.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
     "\n",
     "# graph traversal: BFS & DFS\n",
     "# Tree traversal과 다르게, 중복의 가능성이 존재한다.\n",
-    "# 별개로, traversal에서 queue, stack을 사용하는 이유는 한 개만 추출에서 작업을 진행하기 때문.\n",
+    "# 별개로, traversal에서 queue, stack을 사용하는 이유는 한 개만 추출하여 작업을 진행하기 때문.\n",
     "```"
    ]
   },
@@ -1126,7 +1126,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1165,11 +1164,42 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "{0: 1}\n",
+      "[(0, 5), (1, 3)]\n",
+      "{0: 1, 1: 0}\n",
+      "[(0, 5), (1, 3), (2, 7)]\n",
+      "{0: 1, 1: 0, 2: 2}\n",
+      "[(0, 5), (1, 3)]\n",
+      "{0: 1, 1: 0, 2: 2, 3: 3}\n",
+      "[]\n",
+      "{0: 1, 1: 0, 2: 2, 3: 3, 4: 2}\n",
+      "[(0, 5), (1, 3), (2, 7), (3, 8), (4, 6), (5, 2)]\n",
+      "{0: 1, 1: 0, 2: 2, 3: 3, 4: 2, 5: 0}\n",
+      "[(1, 3), (5, 2)]\n",
+      "{0: 1, 1: 0, 2: 2, 3: 3, 4: 2, 5: 0, 6: 4}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "```py\n",
     "# 해당 인덱스까지 슬라이싱했을 때, 해당 값보다 작은 인덱스들의 최대증가수열 + 1.. O(n^2)\n",
     "arr = [5, 3, 7, 8, 6, 2, 9, 4]\n",
     "\n",
@@ -1185,7 +1215,8 @@
     "\n",
     "        subsequences = [(idx, val) for idx, val in enumerate(arr[:i]) if val < arr[i]]\n",
     "        \n",
-    "\n",
+    "        print(subsequences)\n",
+    "        print(memo)\n",
     "        max_value = 0\n",
     "        for idx, sub in subsequences:\n",
     "            value = memo[idx] + 1\n",
@@ -1196,9 +1227,7 @@
     "\n",
     "    return max(LIS_sub)\n",
     "\n",
-    "arr = range(1, 10000)\n",
-    "LIS(arr)\n",
-    "```"
+    "LIS(arr)"
    ]
   },
   {
@@ -1210,7 +1239,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
