--- a/Study/Study_231012_Section8.ipynb
+++ b/Study/Study_231012_Section8.ipynb
@@ -155,9 +155,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "max() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Dev\\coding_test\\Study\\Study_231012_Section8.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Dev/coding_test/Study/Study_231012_Section8.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         d[i] \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m([d[j] \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, i) \u001b[39mif\u001b[39;00m arr[j] \u001b[39m<\u001b[39m arr[i]]) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Dev/coding_test/Study/Study_231012_Section8.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mmax\u001b[39m(d))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Dev/coding_test/Study/Study_231012_Section8.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m solution()\n",
+      "\u001b[1;32mc:\\Dev\\coding_test\\Study\\Study_231012_Section8.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Dev/coding_test/Study/Study_231012_Section8.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m d[\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Dev/coding_test/Study/Study_231012_Section8.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m2\u001b[39m, N\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Dev/coding_test/Study/Study_231012_Section8.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     d[i] \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39;49m([d[j] \u001b[39mfor\u001b[39;49;00m j \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39m1\u001b[39;49m, i) \u001b[39mif\u001b[39;49;00m arr[j] \u001b[39m<\u001b[39;49m arr[i]]) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Dev/coding_test/Study/Study_231012_Section8.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mmax\u001b[39m(d))\n",
+      "\u001b[1;31mValueError\u001b[0m: max() arg is an empty sequence"
+     ]
+    }
+   ],
    "source": [
     "# 5. 최대 부분 증가수열(LIS)\n",
     "# 현재 항의 수열의 길이 = 현재 항보다 작은 값 중 수열의 길이가 가장 큰 값 + 1\n",
@@ -173,11 +186,13 @@
     "    d = [0] * (N+1)\n",
     "    d[1] = 1\n",
     "\n",
-    "    res = 0\n",
     "    for i in range(2, N+1):\n",
-    "        d[i] = max([d[j] if arr[j] < arr[i] else 0 for j in range(i-1, 0, -1)]) + 1\n",
+    "        d[i] = max([d[j] if arr[j] < arr[i] else 0 for j in range(1, i)]) + 1\n",
     "\n",
-    "    print(res)"
+    "    print(max(d))\n",
+    "\n",
+    "\n",
+    "solution()"
    ]
   },
   {
