[Edit] Approaches Renewal

--- a/Approaches.ipynb
+++ b/Approaches.ipynb
@@ -11,38 +11,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0. 시간복잡도 확인:  $ O(n) < 10^{8} $ <br>\n",
+    "0. **시간복잡도 확인**:  $ O(n) < 10^{8} $ <br>\n",
     "<br>\n",
     "1. 직관적 사고 <br>\n",
     "\n",
     "    - **Greedy** : Input, Output 예시로 적고 수식 적기\n",
     "    \n",
-    "    - **graph** : BFS, DFS(완전탐색)\n",
+    "    - **graph** : **BFS** (while q / 종료 조건 / 인접 노드), **DFS** (재귀함수 / 종료 조건 / 인접 노드)\n",
     "\n",
     "    - **비교** : Stack, Queue, Two pointer with sort()\n",
     "\n",
     "    - **두 개 이상의 arr, 2중 arr** : hash(dict)\n",
+    "\n",
+    "    - **스케쥴** : Queue (같은 시간이더라도 append(), popleft()의 순서가 존재할 것. 이를 잘 설정하는 것이 관건.)\n",
     "    \n",
     "<br>\n",
     "\n",
     "2. 자료구조와 알고리즘 활용 <br>\n",
     "\n",
     "    - heap(max, min)\n",
+    "    \n",
+    "        - 우선순위 큐라는 이름 그대로, 값의 크기 순서대로 반환.\n",
+    "\n",
+    "        - iteration마다의 최대값, 최소값, 중간값 등을 구할 때 접근하자.\n",
+    "\n",
+    "        - heappush를 사용해 값을 넣어야지만, 제대로 동작한다.\n",
     "\n",
     "    - Binary Search\n",
     "\n",
-    "    - **최단 거리(시작, 끝 정해짐)** : Dijkstra, Floyd Warshall(3중 for문)\n",
+    "    - **Dijkstra**:\n",
     "\n",
+    "    - **Floyd Warshall** :\n",
     "\n",
-    "    - **Topological sort** :\n",
-    "        - for 선후관계 작업 순서 결정 -> 진입차수 with BFS: 진입차수 0인 node\n",
+    "        - **시작점과 끝점이 정해져 있을 때의 최단 거리 계산 시 접근**\n",
+    "\n",
+    "        - distance matrix / 3중 for문 / min(다이렉트, 우회)\n",
+    "\n",
+    "    <br>\n",
+    "\n",
+    "    - **Topology sort** :\n",
+    "    \n",
+    "        - 정렬 알고리즘의 일종, 선수과목을 고려한 학습 순서 설정 등의 문제에서 접근\n",
+    "\n",
+    "        - 간선(링크)의 방향성 및 순서가 존재하는 문제에서 접근\n",
+    "\n",
+    "        - 인접리스트, 노드 진입 차수 리스트 / 진입 차수 = 0: queue.append() / BFS + 진입 차수 차감\n",
+    "\n",
     "        \n",
     "    \n",
     "    <br>\n",
     "\n",
     "    - **kruskal algorithm** :\n",
-    "    \n",
-    "        - 최소 비용 그래프 연결: 정렬, 사이클 여부 with union-find\n",
+    "\n",
+    "        - **최소 비용의 모두 연결된 그래프(신장트리) 문제에서 접근**\n",
+    "\n",
+    "        - 비용 기준으로 링크 정렬 / union-find / 공통 조상(사이클)이 아니면 비용 추가\n",
     "\n",
     "<br>\n",
     "\n",
@@ -64,6 +87,13 @@
     "        ```\n",
     "    \n",
     "    - **Knapsack**\n",
+    "\n",
+    "        - 점화식: 현재 무게의 최대 가치 = ((현재 무게 - 선택지의 무게)의 최대 가치 + 선택지의 가치)의 최댓값.\n",
+    "\n",
+    "        - dp[i]: i kg에서의 최대 가치.\n",
+    "        ```python\n",
+    "            dp[i] = max([dp[i-weights[j]] + values[j] if i-weights[j] > 0 else 0 for j in range(len(weights))])\n",
+    "        ```\n",
     "    \n",
     "        \n",
     "    "
@@ -73,18 +103,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Iteration**"
+    "### **Stack**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- for, while 등의 반복문으로, 정의 그대로 반복되는 규칙을 만들어야 한다.\n",
+    "- 앞의 인덱스와 비교를 계속해야 하는 문제에서 접근해볼 것.\n",
     "\n",
-    "- **리스트 내 원소 값의 비교**에서 주로 사용되기 때문에 거의 대부분의 문제에서 활용된다.\n",
+    "- 빈 스택 or 풀 스택 / pop(), append() 조건 설정 / while을 통해 계속 밀어낼 것인지\n",
     "\n",
-    "- 단, O($N^{2}$)과 같은 이중반복문의 경우, 효율성에서 오답이 될 수 있으니 주의."
+    "```python\n",
+    "\n",
+    "    stack = [] || stack = deque(arr) # 빈 스택에서 스타트 or 풀 스택에서 스타트 (2개의 리스트일 경우에 가능성 있을듯.)\n",
+    "\n",
+    "    for i in range(len(elements)): || for e in elements:\n",
+    "        # while stack: # while문을 통해 pop() 반복할 것인지 확인\n",
+    "        if stack[-1] ~ Condition: # 조건을 통해 pop or append\n",
+    "            stack.pop() || res.append(stack.pop()) # pop()을 result에 담을 것인지\n",
+    "        stack.append(e)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Queue**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 뒤의 인덱스와 비교를 계속해야 하는 문제에서 접근해볼 것.\n",
+    "\n",
+    "- 리스트를 순환 형태로 반복시켜야 할 경우에도 접근해볼 것.\n",
+    "\n",
+    "- 빈 큐 or 풀 큐 / popleft(), append() 조건 설정 / while을 통해 계속 밀어낼 것인지\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "    from collections import deque\n",
+    "    \n",
+    "        queue = deque(elements) || queue = deque([]) # 풀 큐 or 빈 큐에서 스타트\n",
+    "        cnt = 0\n",
+    "\n",
+    "        while queue:\n",
+    "            curr = queue.popleft()\n",
+    "\n",
+    "            if curr ~ condition(cnt): # append 관련 조건 세우기 (큐 대기열 비교, 다른 리스트 비교 등)\n",
+    "                queue.append(curr)\n",
+    "                cnt += 1\n",
+    "                \n",
+    "            continue\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Heap**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 우선순위 큐라는 이름 그대로, 값의 크기 순서대로 반환.\n",
+    "\n",
+    "- iteration마다의 최대값, 최소값, 중간값 등을 구할 때 접근하자.\n",
+    "\n",
+    "- heappush를 사용해 값을 넣어야지만, 제대로 동작한다.\n",
+    "\n",
+    "```python\n",
+    "    import heapq\n",
+    "\n",
+    "    h = []\n",
+    "    for i in arr:\n",
+    "        heapq.heappush(h, i)\n",
+    "    \n",
+    "    for _ in range(h):\n",
+    "        heapq.heappop(h)\n",
+    "\n",
+    "\n",
+    "    # 중간값 계산\n",
+    "    # arr을 크기 순으로 정렬하고 반으로 잘랐을 때,\n",
+    "    # 작은 값을 갖는 원소들은 max_heap, 나머지는 min_heap로 가게 되면\n",
+    "    # 작은 값 중 가장 큰 값 vs 큰 값 중 가장 작은 값이 되며,\n",
+    "    # 이 중 작은 값을 선택하니 max_heap[0]이 중간값이 되는 것.\n",
+    "\n",
+    "    # 위와 같이 구현하려면, max_heap[0] > min_heap[0]일 때 swap 해주어야 한다.\n",
+    "    # 위 조건을 만족하는 것 자체가 max_heap에는 큰 값이 존재한다는 것이기 때문.\n",
+    "    # 그리고, max_heap[0]가 가장 크기 때문에 위 조건을 만족하지 않으면 제 자리에 있다는 것.\n",
+    "    \n",
+    "    N = int(input())\n",
+    "    max_heap, min_heap = [], []\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        num = int(input())\n",
+    "\n",
+    "        if len(max_heap) == len(min_heap):\n",
+    "            heapq.heappush(max_heap, -num)\n",
+    "        else:\n",
+    "            heapq.heappush(min_heap, num)\n",
+    "        \n",
+    "        if len(max_heap) > 0 and len(min_heap) > 0:\n",
+    "            if -max_heap[0] > min_heap[0]:\n",
+    "                right = -heapq.heappop(max_heap)\n",
+    "                left = heapq.heappop(min_heap)\n",
+    "\n",
+    "                heapq.heappush(max_heap, -left)\n",
+    "                heapq.heappush(min_heap, right)\n",
+    "        \n",
+    "        print(-max_heap[0])\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -168,26 +308,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Stack**"
+    "### **Kruskal Algorithm**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 앞의 인덱스와 비교를 계속해야 하는 문제에서 접근해볼 것.\n",
+    "- 최소 비용의 모두 연결된 그래프(신장트리) 문제에서 접근\n",
     "\n",
-    "- 언제 pop(), append()할지, 계속 pop()할지 고려하자\n",
+    "- 비용 기준으로 링크 정렬 / union-find / 공통 조상(사이클)이 아니면 비용 추가\n",
+    "\n",
+    "```python\n",
+    "    def solution(n, costs):\n",
+    "        # 호출하지 않으면 parent에는 연결되어 있더라도 최초 조상까지 가지 않을 수는 있다.\n",
+    "        def find_parent(parent, node):\n",
+    "            if node != parent[node]:\n",
+    "                # 최초 조상까지 가게 된다.\n",
+    "                parent[node] = find_parent(parent, parent[node])\n",
+    "            \n",
+    "            return parent[node]\n",
+    "        \n",
+    "        def union_parent(parent, a, b):\n",
+    "            a = find_parent(parent, a)\n",
+    "            b = find_parent(parent, b)\n",
+    "            \n",
+    "            if a < b:\n",
+    "                parent[b] = a\n",
+    "            \n",
+    "            else:\n",
+    "                parent[a] = b\n",
+    "            \n",
+    "        \n",
+    "        costs.sort(key = lambda x: x[2])\n",
+    "\n",
+    "        res = 0\n",
+    "        parent = [i for i in range(n)]\n",
+    "        for a, b, cost in costs:\n",
+    "            if find_parent(parent, a-1) != find_parent(parent, b-1):\n",
+    "                res += cost\n",
+    "                union_parent(parent, a-1, b-1)\n",
+    "        \n",
+    "        print(parent) # [0, 0, 0, 2, 0, 0, 2]\n",
+    "        find_parent(parent, 3)\n",
+    "        print(parent) # [0, 0, 0, 0, 0, 0, 2]\n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "    costs = [[1, 2, 29], [1, 5, 75], [2, 3, 35], [2, 6, 34], [3, 4, 7], [4, 6, 23], [4, 7, 13], [5, 6, 53], [6, 7, 25]]\n",
+    "    solution(7, costs)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Dijkstra**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graphs = [\n",
+    "    [1, 2, 2],\n",
+    "    [1, 3, 5],\n",
+    "    [1, 4, 1],\n",
+    "    [2, 3, 3],\n",
+    "    [2, 4, 2],\n",
+    "    [3, 2, 3],\n",
+    "    [3, 6, 5],\n",
+    "    [4, 3, 3],\n",
+    "    [4, 5, 1],\n",
+    "    [5, 3, 1],\n",
+    "    [5, 6, 2]\n",
+    "]\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "import heapq\n",
+    "\n",
+    "n = 6\n",
+    "\n",
+    "adj = [[] for _ in range(n)]\n",
+    "\n",
+    "distance = [float('inf')]*(n+1)\n",
+    "visited = [0]*(n+1)\n",
+    "\n",
+    "for g in graphs:\n",
+    "    adj[g[0]].append((g[1], g[2]))\n",
+    "\n",
+    "def dijkstra(start):\n",
+    "    q = []\n",
+    "    heapq.heappush(q, (0, start))\n",
+    "    distance[start] = 0\n",
+    "    while q:\n",
+    "        # 최단 거리 노드 정보 꺼내기\n",
+    "        now, dist = heapq.heappop(q)\n",
+    "\n",
+    "        # 해당 노드를 처리한 적 있다..?\n",
+    "        if distance[now] < dist:\n",
+    "            continue\n",
+    "        \n",
+    "        # distance[now] >= dist...\n",
+    "        # 인접 노드 확인\n",
+    "        for i in adj[now]:\n",
+    "            # dist: 시작점으로부터 현재 노드까지의 최단거리\n",
+    "            # i[1]: 현재 노드와 인접 노드 사이의 거리\n",
+    "            cost = dist + i[1]\n",
+    "            \n",
+    "            # distance[i[0]]: 현재 최단 거리 테이블에서의 시작점부터 인접노드까지 거리\n",
+    "            if cost < distance[i[0]]:\n",
+    "                distance[i[0]] = cost\n",
+    "                # 갱신된다면 인접노드의 최단 거리와 인접 노드를 담는다.\n",
+    "                heapq.heappush(q, (i[0], cost))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Floyd Warshall**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 시작점과 끝점이 정해져 있을 때의 최단 거리 계산 시 접근\n",
+    "\n",
+    "- distance matrix / 3중 for문 / min(다이렉트, 우회)\n",
     "\n",
     "```python\n",
     "\n",
-    "stack = [] || stack = list # 빈 스택에서 스타트 or 풀 스택에서 스타트 (2개의 리스트일 경우에 가능성 있을듯.)\n",
+    "    distances = [[0]*n for _ in range(n)]\n",
     "\n",
-    "for i in range(len(elements)): || for e in elements:\n",
-    "    # while stack: # while문을 통해 pop() 반복할 것인지 확인\n",
-    "    if stack[-1] ~ Condition: # 조건을 통해 pop or append\n",
-    "        stack.pop() || res.append(stack.pop()) # pop()을 result에 담을 것인지\n",
-    "    stack.append(e)\n",
+    "    for a, b, dist in distance:\n",
+    "        distances[a][b] = dist\n",
+    "        distances[b][a] = dist\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        distances[i][i] = 1\n",
+    "    \n",
+    "    for k in range(n):\n",
+    "        for i in range(n):\n",
+    "            for j in range(n):\n",
+    "\n",
+    "                distances[i][j] = min(distances[i][j], distances[i][k] + distances[k][j])\n",
     "\n",
     "```"
    ]
@@ -196,30 +478,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Queue**"
+    "### **Topology Sort**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 뒤의 인덱스와 비교를 계속해야 하는 문제에서 접근해볼 것.\n",
+    "- 정렬 알고리즘의 일종, 선수과목을 고려한 학습 순서 설정 등의 문제에서 접근\n",
     "\n",
-    "- 리스트를 순환 형태로 반복시켜야 할 경우에도 접근해볼 것.\n",
+    "- 간선(링크)의 방향성이 존재하는 문제에서 접근\n",
     "\n",
-    "- 풀 큐 스타트, 언제 popleft(), append()할지만 고려하자.\n",
+    "- 인접리스트, 노드 진입 차수 리스트 / 진입 차수 = 0: queue.append() / BFS + 진입 차수 차감\n",
+    "\n",
+    "```py\n",
+    "    from collections import deque\n",
+    "\n",
+    "    # 노드에 대한 진입차수\n",
+    "    indegree = [0]*(v+1)\n",
+    "\n",
+    "    # 인접 리스트\n",
+    "    graph = [[] for i in range(v+1)]\n",
+    "    for i, j in range(e):\n",
+    "        graph[i].append(j)\n",
+    "        indegree[j] += 1\n",
+    "\n",
+    "\n",
+    "    def topology_sort():\n",
+    "        result = []\n",
+    "        q = deque()\n",
+    "\n",
+    "        # 진입 차수가 0인 노드 큐에 삽입.\n",
+    "        for i in range(1, v+1):\n",
+    "            if indegree[i] == 0:\n",
+    "                q.append(i)\n",
+    "            \n",
+    "        # 사이클이 존재할 경우, 모두 방문하지 못하고 순회가 끝난다.\n",
+    "        while q:\n",
+    "            now = q.popleft()\n",
+    "            result.append(now)\n",
+    "\n",
+    "            for i in graph[now]:\n",
+    "                indegree[i] -= 1\n",
+    "            \n",
+    "                if indegree[i] == 0:\n",
+    "                    q.append(i)\n",
+    "    \n",
+    "    topology_sort()\n",
+    "    print(res)\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Dynamic Programming**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 점화식 형태로 뭔가 반복된다 싶고, 시간복잡도가 커서 메모리를 써야 될 경우 접근\n",
+    "\n",
+    "- Bottom-up: for문 / 초기 조건 / 점화식\n",
+    "\n",
+    "- Top-down: 재귀함수 / 종료(초기) 조건 / 점화식"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Least Increasing Subsequence(LIS)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Bottom-up\n",
+    " \n",
+    "- 점화식: 현재 항의 수열의 길이 = 현재 항보다 작은 값 중 수열의 길이가 가장 큰 값 + 1\n",
+    "\n",
+    "- 현재 항의 수열의 길이(dp): 현재 항의 값을 끝으로 하는 최대 증가 부분 수열\n",
     "\n",
     "```python\n",
-    "from collections import deque\n",
-    "    queue = deque(elements) # 풀 큐에서 스타트\n",
-    "    cnt = 0\n",
-    "    while queue:\n",
-    "        curr = queue.popleft()\n",
-    "        if curr ~ condition(cnt): # append 관련 조건 세우기 (큐 대기열 비교, 다른 리스트 비교 등)\n",
-    "            queue.append(curr)\n",
-    "            cnt += 1\n",
-    "        continue\n",
     "\n",
+    "    def LIS(arr, N):\n",
+    "\n",
+    "        dp = [0]*N\n",
+    "        dp[0] = 1\n",
+    "\n",
+    "        for i in range(1, N):\n",
+    "            dp[i] = max([dp[j] if arr[j] < arr[i] else 0 for j in range(i)]) + 1\n",
+    "\n",
+    "        return max(dp)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Knapsack Algorithm**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 점화식: 현재 무게의 최대 가치 = ((현재 무게 - 선택지의 무게)의 최대 가치 + 선택지의 가치)의 최댓값.\n",
+    "\n",
+    "- dp[i] = max([dp[i-weights[j]] + values[j] for j in range(len(weights))])\n",
+    "\n",
+    "- dp[i]: i kg에서의 최대 가치.\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "    def knapsack(weights, values, limit):\n",
+    "\n",
+    "        dp = [0]*(limit+1)\n",
+    "\n",
+    "        for i in range(len(weights)):\n",
+    "            dp[weights[i]] = values[i]\n",
+    "        \n",
+    "        for i in range(limit+1):\n",
+    "            dp[i] = max([dp[i-weights[j]] + values[j] if i-weights[j] > 0 else 0 for j in range(len(weights))])\n",
+    "        \n",
+    "        return dp[limit]\n",
     "```"
    ]
   }
